RESOLVED FIXED 107722
[Chromium] Fix some #includes to headers in chromium/public/platform/ that have been moved to the new Platform directory
https://bugs.webkit.org/show_bug.cgi?id=107722
Summary [Chromium] Fix some #includes to headers in chromium/public/platform/ that ha...
Mark Pilgrim (Google)
Reported 2013-01-23 12:38:45 PST
[Chromium] Fix some #includes to headers in chromium/public/platform/ that have been moved to the new Platform directory
Attachments
Patch (1.74 KB, patch)
2013-01-23 12:39 PST, Mark Pilgrim (Google)
no flags
Mark Pilgrim (Google)
Comment 1 2013-01-23 12:39:57 PST
Mark Pilgrim (Google)
Comment 2 2013-01-23 12:41:04 PST
Comment on attachment 184285 [details] Patch Missed these in the last sweep.
WebKit Review Bot
Comment 3 2013-01-23 13:21:36 PST
Comment on attachment 184285 [details] Patch Clearing flags on attachment: 184285 Committed r140578: <http://trac.webkit.org/changeset/140578>
WebKit Review Bot
Comment 4 2013-01-23 13:21:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.