[Chromium] Fix some #includes to headers in chromium/public/platform/ that have been moved to the new Platform directory https://bugs.webkit.org/show_bug.cgi?id=107722

Reviewed by Darin Fisher.

These headers just redirect to the new versions, so call the new
versions directly.

* src/linux/WebFontInfo.cpp:
* src/mac/WebSubstringUtil.mm:


git-svn-id: svn://svn.chromium.org/blink/trunk@140578 bbb929c8-8fbe-4397-9dbb-9b2b20218538