third_party/WebKit/Source/WebKit/chromium/src/linux/WebFontInfo.cpp
@@ -33,8 +33,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "WebFontInfo.h"
 
 #include "WebFontRenderStyle.h"
-#include "platform/linux/WebFontFamily.h"
 #include <fontconfig/fontconfig.h>
+#include <public/linux/WebFontFamily.h>
 #include <string.h>
 #include <unicode/utf16.h>
 
