third_party/WebKit/Source/WebKit/chromium/src/mac/WebSubstringUtil.mm
@@ -48,7 +48,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "RenderStyle.h"
 #include "TextIterator.h"
 #include "WebFrameImpl.h"
-#include "platform/WebRect.h"
+#include <public/WebRect.h>
 
 using namespace WebCore;
 
